--- a/config_table/frontend/src/app.css
+++ b/config_table/frontend/src/app.css
@@ -11,7 +11,9 @@
 }
 
 .config-table-td{
-    padding: 2px;
+    margin: 5px;
+    padding: 4px;
+    width: 20%;
 }
 
 .config-table-btn {
@@ -31,6 +33,7 @@
     user-select: none;
     background-color: rgb(255, 255, 255);
     border: 1px solid rgba(49, 51, 63, 0.2);
+    margin: 4px;
 }
 .config-table-btn:hover{
     border-color: red;
